<resources>
    <string name="app_name">450GroupOne</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="registration_complete">Registration is complete!</string>
    <string name="please_check_email">Please check your email.</string>
    <string name="email_sent_verify">An email has been sent to you to verify and complete registration.</string>
    <string name="recovery_email_password_sent">An email has been sent to you containing your password.</string>
    <string name="recovery_email_username_sent">An email has been sent to you containing your username.</string>
    <string name="se_first_name">Please enter first name</string>
    <string name="se_last_name">Please enter last name</string>
    <string name="se_email">Please enter email</string>
    <string name="se_username">Please enter username</string>
    <string name="se_pass">Please enter password</string>
    <string name="se_confirm_pass">Please confirm your password</string>
    <string name="se_pass_tooshort">Password should be at least 6 characters</string>
    <string name="se_pass_notmatch">Passwords don\'t match</string>
    <string name="se_dont_use_underscore">Please don\'t use underscore in our last name or first name</string>

    <string name="application_name">Chat App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">First Last</string>
    <string name="nav_header_subtitle">name@fakemail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="flist_button_add_friend">Add friend</string>
    <string name="flist_button_new_group">New group</string>

    <string name="recover_password_email_sent">Password Sent!</string>
    <string name="recover_username_email_sent">Username Sent!</string>
    <string name="help_password_fragment_button">Recover Password</string>
    <string name="help_user_fragment_button">Recover User Name</string>
    <string name="login_help_fragment_button">Help</string>
    <string name="login_fragment_button">Login</string>
    <string name="register_fragment_button">Register</string>
    <string name="welcome_fragment">Welcome!</string>
    <string name="please_log_in_fragment">Please log in</string>
    <string name="please_register_for_an_account_fragment">Please register for an account</string>
    <string name="login_successfull_fragment">Login Successfull!</string>
    <string name="email_fragment">email</string>
    <string name="first_name_fragment">Firstname</string>
    <string name="last_name_fragment">Lastname</string>
    <string name="login_success_fragment">Login Successful</string>
    <string name="logout_fragment">Logout</string>
    <string name="App_name_fragment">ChatApp</string>
    <string name="New_chat_fragment">New Chat</string>
    <string name="temp_chat1_fragment">Temp Chat 1</string>
    <string name="temp_chat2_fragment">Temp Chat 2</string>
    <string name="temp_chat3_fragment">Temp Chat 3</string>

    <string name="data_not_available">Data not available</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>

    <string name="search_hint">Type friend name</string>
    <string name="search_zip_hint">Enter zip code</string>
    <string name="search_new_hint"><font size="15">Type new friend name, email or username</font></string>

    <string name="please_log_in_or_register_fragment">Please log in or register</string>
    <string name="home_chat_delete">Delete</string>

    <string name="username_fragment">Username</string>
    <string name="password_fragment">Password</string>
    <string name="search_text_view">Search by full name, email or username </string>
    <string name="invite_sent">Invitation Sent Successfully!</string>
    <string name="sent">Sent</string>
    <string name="received">Received</string>
    <string name="cancel_invite">Cancel Invite</string>
    <string name="invite">Invite</string>
    <string name="cancel">Cancel</string>
    <string name="create_group">Create</string>
    <string name="leave_group">Delete Chat</string>
    <string name="view_members">View Group Members</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
