<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="center"
             tools:context=".SuccessRegistrationFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/registration_complete"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/please_check_email"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/email_sent_verify"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/tempChat1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"/>
</LinearLayout>